fix spacing and styling

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1796,6 +1796,14 @@ body {
   white-space: pre-wrap;
   user-select: none;
 }
+.playlist-list-content__extreme {
+  user-select: none;
+  display: inline-block;
+  vertical-align: middle;
+}
+.playlist-list-content__extreme input[type="checkbox"] {
+  margin-right: 0.3rem;
+}
 /* Playlist-List-Fake-Item */
 .playlist-list-fake-item {
   display: flex;
